# optimize

./: .gitmodules  CMakeLists.txt
src/: CMakeLists.txt  find_minimum.cpp  find_minimum.hpp  find_root.cpp  find_root.hpp
test/: CMakeLists.txt  bench_find_root.cpp  find_root_gsl.cpp  find_root_gsl.hpp  test_find_minimum.cpp  test_find_root.cpp
